<resources>
    <string name="app_name">Comfostays</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="user_name">User Name</string>
    <string name="loginpagedesc">Please enter your registered Email Id/Mobile Number and password to login to your ComforStays account</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="new_user">New To ComforStays?</string>
    <string name="title_activity_welcome">ComforStays</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="welcome_to_comfostays">Welcome to ComfoStays</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="enterEmail">Email</string>
    <string name="email_address">Email Address</string>
    <string name="continueSignup">Continue</string>
    <string name="name">Name</string>
    <string name="mobile">Contact Number</string>
    <string name="signuppagedesc">Thanks for choosing ComforStays</string>
    <string name="already_part_of_eazylivings">Already part of ComforStays?</string>
    <string name="setPassword">Set Password</string>
    <string name="setBuildingName">Building Name</string>
    <string name="customer">CUSTOMER</string>
    <string name="owner">OWNER</string>
    <string name="action_logOut">LOGOUT</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_property">Add Property</string>
    <string name="property_name">Property Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="building_name">Building Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>
    <string name="first_floor">First Floor</string>
    <string name="add_floor">ADD FLOOR</string>
    <string name="remove">Remove</string>
    <string name="single_occupancy">Single Occupancy</string>
    <string name="double_occupancy">Double Occupancy</string>
    <string name="triple_occupancy">Triple Occupancy</string>
    <string name="tetra_occupancy">Tetra Occupancy</string>
    <string name="rooms_with_mess_daily">Rooms with Mess (Daily)</string>
    <string name="charges_inr">Charges(INR) :</string>
    <string name="rooms_with_mess_monthly">Rooms with Mess (Monthly)</string>
    <string name="please_select_which_ever_is_applicable_and_provide_the_cost_and_charges_for_the_same">Please select which ever is applicable and provide the cost and charges for the same.</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="rooms_without_mess_daily">Rooms without Mess (Daily)</string>
    <string name="rooms_without_mess_monthly">Rooms without Mess (Monthly)</string>

    <string name="description">Image View</string>
    <string name="continue_next">Continue</string>
    <string name="pgs">PGs</string>
    <string name="flats">Flats</string>
    <string name="hotels">Hotels</string>
    <string name="tap_to_get_current_location">Tap To Get Current Location</string>
    <string name="meals_provided">Meals Provided</string>
    <string name="_2_wheeler_parking">2 Wheeler Parking</string>
    <string name="_4_wheeler_parking">4 Wheeler Parking</string>
    <string name="internet_facility">Internet Facility</string>
    <string name="please_proivide_all_the_amenitites_that_are_being_provided_along_with_the_room_seperated_by_comma">Please proivide all the amenitites that are being provided along with the room seperated by comma( , ).</string>
    <string name="tv_gyser_bed_mattress_etc">TV, Gyser, Bed, Mattress etc.</string>
    <string name="finish">FINISH</string>
    <string name="edit">EDIT</string>
    <string name="facilities_provided">Facilities Provided</string>
    <string name="building_details">Building Details</string>
    <string name="cost_and_charges">Cost And Charges</string>
    <string name="year">YEAR</string>
    <string name="month">MONTH</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="for_current_month">For Current Month</string>
    <string name="for_current_year">For Current Year</string>
    <string name="get_occupancy">GET OCCUPANCY</string>
    <string name="select_a_range">Select a Range</string>
    <string name="profession">Profession</string>
    <string name="room_nnumber">Room \nNumber</string>
    <string name="duration_nof_stay">Duration \nOf Stay</string>
    <string name="complaints_nlogged">Complaints \nLogged</string>
    <string name="residing_since">Residing Since</string>
    <string name="about">About</string>
    <string name="contact_details">Contact Details</string>
    <string name="id_proofs">Id Proofs</string>
    <string name="title_activity_add_meals_schedule">AddMealsScheduleActivity</string>
    <string name="title_activity_edit_meals">EditMealsActivity</string>
    <string name="title_activity_meals">MealsActivity</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="monday">MONDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="curries">Curries</string>
    <string name="rice_chapattis">Rice , Chapattis</string>
    <string name="extras_curd_salad_pickle">Extras: Curd, salad, pickle</string>
    <string name="update">UPDATE</string>
    <string name="free_wifi">Free WiFi</string>
    <string name="clothes_washing_and_ironing">Clothes Washing and Ironing</string>
    <string name="_24_7_electricity">24 * 7 Electricity</string>
    <string name="meals_offered">Meals Offered</string>
    <string name="meals_not_offered">Meals Not Offered</string>
    <string name="vegetarian_food">Vegetarian Food</string>
    <string name="non_vegetarian">Non- Vegetarian</string>
    <string name="meals_and_food">Meals and Food</string>
    <string name="enter_other_facilities_seperated_by_comma">Enter other facilities seperated by comma ( , )</string>
    <string name="type_of_rooms">Type Of Rooms</string>
    <string name="north_indian_food">North Indian Food</string>
    <string name="south_indian_food">South Indian Food</string>
    <string name="next">NEXT</string>
    <string name="weekly_food_schedule_available">Weekly food schedule available?</string>
    <string name="enter_the_charges_leave_the_charges_whichever_not_applicable_or_not_offered">Enter the charges. Leave the charges whichever not applicable or not offered.</string>
    <string name="room_type">Room Type</string>
    <string name="charges">Charges</string>
    <string name="duration">Duration</string>
    <string name="charge_type">Charge Type</string>
    <string name="remarks">Remarks</string>
    <string name="feel_that_tingling_in_your_fingertips">Feel that tingling in your fingertips?</string>
    <string name="that_apos_s_the_magnetic_urge_to_contact_us">That\'s the magnetic urge to contact us</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="enter_your_message_here">Enter your message here...</string>
    <string name="close">Close</string>
    <string name="back_to_my_property">BACK TO MY PROPERTY</string>
    <string name="done">DONE</string>
    <string name="tenants_notifications">TENANTS NOTIFICATIONS</string>
    <string name="notify_tenants">NOTIFY TENANTS</string>
    <string name="tenants_registration">TENANTS REGISTRATION</string>
    <string name="delete">DELETE</string>
    <string name="deactivate">DEACTIVATE</string>
    <string name="filter">FILTER</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="no_of_complaints">No. of Complaints</string>
    <string name="complaints">Complaints</string>
    <string name="rent_paid">Rent Not Paid</string>
    <string name="active_tenant">Not Active Tenant</string>
    <string name="property">Property</string>
    <string name="residing_from">Residing From</string>
    <string name="residing_till">Residing Till</string>
    <string name="add_tenant">ADD TENANT</string>
    <string name="cancel">CANCEL</string>
    <string name="get_current_occupancy">Get Current Occupancy</string>
    <string name="room_no">Room No.</string>
    <string name="television">Television</string>
    <string name="cooler">Cooler</string>
    <string name="celling_fan">Celling Fan</string>
    <string name="bed">Bed</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="geyser">Geyser</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="furnished_flat">Furnished Flat</string>
    <string name="breakfast">Breakfast</string>
    <string name="timings">TIMINGS</string>
    <string name="_08_00">08 : 00</string>
    <string name="_10_00">10 : 00</string>
    <string name="_14_00">14 : 00</string>
    <string name="_16_00">16 : 00</string>
    <string name="_22_00">22 : 00</string>
    <string name="_20_00">20 : 00</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>


</resources>
