<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".activities.owner_activities.building_setup.CaptureOtherDetailsActivity">

    <include android:id="@+id/layout_header"
        layout="@layout/layout_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/captureOtherDetails_scrollView"
        android:layout_below="@+id/layout_header"
        android:layout_above="@+id/facilitiesProvided_button_continue"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/type_of_rooms"
                android:id="@+id/captureOtherDetails_textView_typeOfRoomsHeading"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/captureOtherDetails_gridLayout_tyesOfRooms">


            </GridLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/facilities_provided"
                android:id="@+id/captureOtherDetails_textView_facilitiesProvidedHeading"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <GridLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/captureOtherDetails_gridLayout_facilitiesProvided">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/captureOtherDetails_imageView_twoWheelerParking"
                    android:contentDescription="@string/description"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/two_wheeler_parking_icon" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_wheeler_parking"
                    android:id="@+id/captureOtherDetails_checkBox_twoWheelerParking"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp" />


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/captureOtherDetails_imageView_fourWheelerParking"
                    android:contentDescription="@string/description"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:src="@drawable/four_wheeler_parking_icon" />


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_wheeler_parking"
                    android:id="@+id/captureOtherDetails_checkBox_fourWheelerParking"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/captureOtherDetails_imageView_allTimeElectricity"
                    android:contentDescription="@string/description"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:src="@drawable/electricity_icon" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_7_electricity"
                    android:id="@+id/captureOtherDetails_checkBox_allTimeElectricity"
                    android:contentDescription="@string/description"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/captureOtherDetails_imageView_laundry"
                    android:contentDescription="@string/description"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:src="@drawable/clothes_washing_icon" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clothes_washing_and_ironing"
                    android:id="@+id/captureOtherDetails_checkBox_laundry"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/captureOtherDetails_imageView_wifi"
                    android:contentDescription="@string/description"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:src="@drawable/free_wifi_icon" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_wifi"
                    android:id="@+id/captureOtherDetails_checkBox_wiFi"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp" />

            </GridLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/captureOtherDetails_editText_remainingFacilities"
                    android:textCursorDrawable="@null"
                    android:hint="@string/enter_other_facilities_seperated_by_comma"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="15dp"
                    android:capitalize="words" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meals_offered"
                android:id="@+id/checkBox_mealsOption"
                android:onClick="onClickMealsCheckBox"
                android:layout_marginTop="10dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/captureOtherDetails_gridLayout_mealsOptions">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian_food"
                    android:id="@+id/captureOtherDetails_checkBox_veg"
                    android:layout_row="0"
                    android:layout_column="0"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_vegetarian"
                    android:id="@+id/captureOtherDetails_checkBox_nonVeg"
                    android:layout_row="0"
                    android:layout_column="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/south_indian_food"
                    android:id="@+id/captureOtherDetails_checkBox_southIndianFood"
                    android:layout_row="1"
                    android:layout_column="0" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/north_indian_food"
                    android:id="@+id/captureOtherDetails_checkBox_northIndianFood"
                    android:layout_row="1"
                    android:layout_column="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_food_schedule_available"
                    android:id="@+id/captureOtherDetails_checkBox_isFixedMealScheduleAvailable"
                    android:layout_row="2"
                    android:layout_column="0" />

            </GridLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/furnished_flat"
                android:id="@+id/captureOtherDetails_checkBox_isFlatFurnished"
                android:onClick="onClickFlatFurnished"
                android:layout_marginTop="10dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gridLayout_itemsProvided">

            </GridLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/facilitiesProvided_button_continue"
        android:onClick="onClickNext"
        android:background="#2E9AFE"
        android:textColor="@drawable/button_text_color"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
